--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>JS 보드게임</title>
+    <title>모노레일 보드게임</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
